--- a/naat/notebooks/files_processing.ipynb
+++ b/naat/notebooks/files_processing.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'list_files' from 'naat.data' (/home/clem/Documents/source/sandbox/naat/naat/data/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnaat\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnaat\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m list_files, get_file_extensions, get_empty_files, list_subfolders\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnaat\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m preprocess_docx_file, preprocess_pdf_file\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnaat\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m CORPUS_PATH, OUTPUT_PATH\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'list_files' from 'naat.data' (/home/clem/Documents/source/sandbox/naat/naat/data/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "from naat.data import list_files, get_file_extensions, get_empty_files, list_subfolders\n",
     "from naat.data import preprocess_docx_file, preprocess_pdf_file\n",
@@ -18,162 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Affaires climatiques</th>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Affaires environnementales</th>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Docs</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Documents</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Droit climatique</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Droits de la nature</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Edito</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Edito + focus</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FICHES D_ARRETS</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Focus</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Focus LF santé environnement</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Focus ONU</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Forme</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PROJET DE LETTRE</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SOURCES PRIMAIRES</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TCE</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>affaires climatiques</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>affaires environnementales</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>contentieux climatique</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>contentieux environnemental</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>contentieux général de l_environnement</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>images</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>référé liberté environnement</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        Count\n",
-       "Affaires climatiques                        8\n",
-       "Affaires environnementales                  8\n",
-       "Docs                                        1\n",
-       "Documents                                   1\n",
-       "Droit climatique                            1\n",
-       "Droits de la nature                         1\n",
-       "Edito                                       1\n",
-       "Edito + focus                               2\n",
-       "FICHES D_ARRETS                             2\n",
-       "Focus                                       6\n",
-       "Focus LF santé environnement                1\n",
-       "Focus ONU                                   1\n",
-       "Forme                                       1\n",
-       "PROJET DE LETTRE                            2\n",
-       "SOURCES PRIMAIRES                           2\n",
-       "TCE                                         1\n",
-       "affaires climatiques                        1\n",
-       "affaires environnementales                  1\n",
-       "contentieux climatique                      2\n",
-       "contentieux environnemental                 1\n",
-       "contentieux général de l_environnement      1\n",
-       "images                                      1\n",
-       "référé liberté environnement                1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "subfolders = list_subfolders(str(CORPUS_PATH), target_level=2)\n",
     "subfolders_df = pd.DataFrame(subfolders, index=[\"Count\"]).T\n",
@@ -182,137 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1. Lettre n°1 _ Les victoires</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2. Lettre n°2 _ La Jeunesse</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3. Lettre n°3 _ Droits fondamentaux</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°10 _ L_Affaire du siècle</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°11 _ droit de propriété et crise climatique</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°12</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°13</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°14</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°15</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°16</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°17</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°4 _ les cas européens</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°5 _ La responsabilité des multinationales pollueuses</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°6 _ L_ONU se saisie de la question climatique</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°7 _ Libertés fondamentales, protection de la santé et crise environnementale</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°8 _ Droits de la nature et droits humains</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre n°9 2020 _ Droit à un environnement sain</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lettre spéciale santé-crise climatique</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    Count\n",
-       "1. Lettre n°1 _ Les victoires                           1\n",
-       "2. Lettre n°2 _ La Jeunesse                             1\n",
-       "3. Lettre n°3 _ Droits fondamentaux                     1\n",
-       "Lettre n°10 _ L_Affaire du siècle                       1\n",
-       "Lettre n°11 _ droit de propriété et crise clima...      1\n",
-       "Lettre n°12                                             1\n",
-       "Lettre n°13                                             1\n",
-       "Lettre n°14                                             1\n",
-       "Lettre n°15                                             1\n",
-       "Lettre n°16                                             1\n",
-       "Lettre n°17                                             1\n",
-       "Lettre n°4 _ les cas européens                          1\n",
-       "Lettre n°5 _ La responsabilité des multinationa...      1\n",
-       "Lettre n°6 _ L_ONU se saisie de la question cli...      1\n",
-       "Lettre n°7 _ Libertés fondamentales, protection...      1\n",
-       "Lettre n°8 _ Droits de la nature et droits humains      1\n",
-       "Lettre n°9 2020 _ Droit à un environnement sain         1\n",
-       "Lettre spéciale santé-crise climatique                  1"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "subfolders = list_subfolders(str(CORPUS_PATH), target_level=1)\n",
     "subfolders_df = pd.DataFrame(subfolders, index=[\"Count\"]).T\n",
