--- a/naat/notebooks/eda_gdrive_api.ipynb
+++ b/naat/notebooks/eda_gdrive_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,18 +113,70 @@
    "source": [
     "service = build('drive', 'v3', credentials=creds)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files:\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1DG-83gKEzv3jPC6CnYt05M9PnBQFLQYZ\",\"La CEDH dans Urgenda et l'Affaire du Siècle vFIN\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1egx9_JMATr0ei6PxlcoNnR5Tmx4zXzx1\",\"NAAT et autres c/ SE Total, devoir de vigilance\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1R2xhv0lZS0FnNpY8s4HeI48OeXVw2SPG\",\"Greenpeace Nordic Association v\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1f1eJrBfsFa3ZgyFqNlF1Qt4JUdxkilIl\",\"SILA et CBD V. BLM et ConocoPhillips\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1PwqAX1yPQE80-6iDThXgYeBRO3QtnV4b\",\"Jugement TJ Nanterre compétence devoir de vigilance\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1Yg4CyFq0HU_2WWSE8vB2nuVP0yZrPtWM\",\"Tsama William et alii v. Attorney General of Uganda\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1ykkgtx3Z4JDk6ovVrcdrOSytIXJ2fgR6\",\"Greenpeace attaque l’Espagne \")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1PIBqL_h94ACLx5s68jE7epYJtfVaSFZW\",\"District Court of The Hague c. Milieudefensie et autres\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1C7tUzmzHzwAqaO6Ynyfb01vRTOegAXAr\",\"Plan B Earth et autres c. secrétaire d'Etat au transport\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1oEiUMAtq2h4NZIUuI-4A40MFkE1VfM7T\",\"US District Court for DC, “Standing Rock Sioux Tribe v. USACE\"\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1lulCEpivMntBMdByqBVTL52wt6TGTn9i\",\"The Commonwealth of Massachusetts v Exxon Mobil Corporation \")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1Nvr4VWpUhDs4HODRkETAO_OGYJbtu2h9\",\"Tribunal régional de Varsovie (Pologne), Greenpeace c\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1gQnWnskmiLHahsaA-Z5TPl3NGu533ZJg\",\"New Zealand High Court Smith v. Fonterra\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1DfRfLNKelm_LQsjzZCkkZSNiKLFiruSo\",\"Greenpeace Allemagne vs Etat fédéral Allemand\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1McCz8HwIJx9MfxumCrGsfquOSymiJNAR\",\"Liberty Case Center for Biological Diversity v. Hilcorp\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1nd9AA2tL2NzCVQXxVcJs8NlgF60K5aVe\",\"Commentaire croisé Liberty et Willow (US) et Arctic Oil (Norvège)\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1JNpsO-VKZHELL9_6YJ6ncspyGsZTFZ9E\",\"Saúl Luciano Lliuya c. RWE (Allemagne)\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/16BuEkfGnq53aTu6Ksshm8hUh31j3XLFZ\",\"Mise en demeure de BNP Parisbas 26-10-22\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1ZMBwhMXxZrfiUALpvgV57HOHD--i3P5f\",\"ENvironnement JEUnesse v. Procureur General du Canada\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1cdlEjj9-Kw6HsFxcjDsElIA60MTwP3oA\",\"Milieudefensie c. Shell\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1jf8epfmD9m_6lQy1nOo9vrljJBfVr60e\",\"C. Sacchi et al v. Argentine et al\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1GxkAhcDR4GhK-i90hjV3jvsFPckmdgUu\",\"Cour constitutionnelle allemande\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1K1Tl76SFoxDoR54HcJ3pLAPNow0a9FRJ\",\"Daniel Billy et al. c. Australie\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1tX8yzCTcWx0lGn4_h9FooM6RaQIraahG\",\"Sustaining the Wild Coast NPC et al. c. Afrique du Sud\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1X8MhoiM_E3QWu2ZGJk814PL9ZixlicG_\",\"Aéroport de Heathrow c. Les Amis de la Terre\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1vbdbRNklP2a3ZQfirefz_yMxe2ZR3Okm\",\"Rocky Mountain farmers Union\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1H1w4exBk6g6OozmkmXSKtb5e6hDXH9Jz\",\"Affaire PSB et al. contre Brésil\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1R4sOUU75sApPaGa4meAXdAdVBwQzOhDo\",\"Chevron - Greenwashing\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/15WFMcSY_8SEXOO9abaYP-L6UiRHmIyz4\",\"Giudizio Universale\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1FOIMfYsAQRokaDc_-5VjyeYjtRPQz2Fd\",\"Friends of the Irish Environment v. Ireland\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1Ick1DUECSwJclPQ-BSiwT_3lj8EJyKsb\",\"Ainées Pour Le Climat\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/13VTdJJnO1gLgoTsKkJR43le8OGw1xOQP\",\"Asghar Leghari\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/16-3CQrciBq4i2yAe99SDVMpud2cZXc1F\",\"CEDH Youth for Climate Justice\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1ibBhvF-9D3OhnvqkRTyw-PVh5dbTUzYv\",\"Affaire Grande-Synthe\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1HM5EkEHA0m6dyOxsE4J0KEpyOCoS02Xl\",\"Affaire du siècle\")\n",
+      "=HYPERLINK(\"https://drive.google.com/drive/folders/1oLrz906AHu9B6-JfhGN1IC1CIw9oTjYx\",\"People's climate case\")\n"
+     ]
+    }
+   ],
+   "source": [
     "# Call the Drive v3 API\n",
+    "parent_folder = \"1-dau0E71lAZjBbT9789Mqk9eCp_tvvJw\"\n",
     "results = service.files().list(\n",
     "    pageSize=100,\n",
-    "    q=\"'1aRthTHi7rT8ONVcItL4MCUSeZmTe4f1M' in parents\",\n",
+    "    q=f\"'{parent_folder}' in parents\",\n",
     "    fields=\"nextPageToken, files(id, name)\").execute()\n",
     "items = results.get('files', [])\n",
     "\n",
     "print('Files:')\n",
     "for item in items:\n",
-    "    print(f\"=HYPERLINK(\\\"https://drive.google.com/drive/folders/{item['id']}\\\",\\\"{item['name']}\\\")\")\n",
-    "\n",
-    "    \n"
+    "    print(f\"=HYPERLINK(\\\"https://drive.google.com/drive/folders/{item['id']}\\\",\\\"{item['name']}\\\")\")"
    ]
   },
   {
@@ -198,7 +250,7 @@
       "Affaires environnementales\n",
       "Affaires environnementales Circulaire visant à consolider le rôle de la justice en matière environnementale\n",
       "Affaires environnementales Le Président Indonésien jugé coupable pour négligence dans la protection du droit à un air sain.docx\n",
-      "Affaires environnementales Décision CC Equateur - Estrellita - Newsletter NAAT.docx\n",
+      "Affaires environnementales Décision CC Equateur - Estrellita - Newsletter naat_core.docx\n",
       "Affaires environnementales madras high court 2022.docx\n",
       "Lettre n°14\n",
       "Affaires climatiques\n",
@@ -403,6 +455,74 @@
     "            create_short_cut(name=file[\"name\"], id=file[\"id\"], folder_id=env_folder_target_id)\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_folder(name, folder_id):\n",
+    "    folder_metadata = {\n",
+    "        'name': name,\n",
+    "        'mimeType': 'application/vnd.google-apps.folder',\n",
+    "        'parents': [folder_id]\n",
+    "    }\n",
+    "    return service.files().create(body=folder_metadata, fields='id').execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mise en demeure de BNP Parisbas 26-10-22.docx\n",
+      "Saúl Luciano Lliuya c. RWE (Allemagne).docx\n",
+      "Commentaire croisé Liberty et Willow (US) et Arctic Oil (Norvège).docx\n",
+      "Liberty Case Center for Biological Diversity v. Hilcorp.docx\n",
+      "Greenpeace Allemagne vs Etat fédéral Allemand\n",
+      "New Zealand High Court Smith v. Fonterra\n",
+      "Tribunal régional de Varsovie (Pologne), Greenpeace c\n",
+      "The Commonwealth of Massachusetts v Exxon Mobil Corporation \n",
+      "US District Court for DC, “Standing Rock Sioux Tribe v. USACE\"\n",
+      "Plan B Earth et autres c. secrétaire d'Etat au transport\n",
+      "District Court of The Hague c. Milieudefensie et autres\n",
+      "Greenpeace attaque l’Espagne \n",
+      "Tsama William et alii v. Attorney General of Uganda\n",
+      "Jugement TJ Nanterre compétence devoir de vigilance.pdf\n",
+      "SILA et CBD V. BLM et ConocoPhillips.docx\n",
+      "Greenpeace Nordic Association v.docx\n",
+      "NAAT et autres c/ SE Total, devoir de vigilance\n",
+      "La CEDH dans Urgenda et l'Affaire du Siècle vFIN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Affaires environnementales\n",
+    "parent_dir = '1-dau0E71lAZjBbT9789Mqk9eCp_tvvJw'\n",
+    "# 1-dau0E71lAZjBbT9789Mqk9eCp_tvvJw\n",
+    "# 1pxBuo72r20y16zXWIH31nJuNbfqVfku6\n",
+    "\n",
+    "env_res = service.files().list(\n",
+    "    pageSize=50,\n",
+    "    q=f\"'{parent_dir}' in parents and mimeType != 'application/vnd.google-apps.folder'\",\n",
+    "    fields=\"nextPageToken, files(id, name)\").execute()\n",
+    "env_files = env_res.get('files', [])\n",
+    "for env_file in env_files:\n",
+    "    print(env_file[\"name\"])\n",
+    "\n",
+    "    folder = create_folder(env_file[\"name\"].replace(\".docx\", \"\").replace(\".pdf\", \"\"), parent_dir)\n",
+    "\n",
+    "    file_metadata = {\n",
+    "        'parents': [folder.get('id')],\n",
+    "        'name': env_file[\"name\"]\n",
+    "    }\n",
+    "    service.files().copy(fileId=env_file[\"id\"], body=file_metadata).execute()\n"
    ]
   }
  ],
