--- a/naat/notebooks/eda_languages.ipynb
+++ b/naat/notebooks/eda_languages.ipynb
@@ -63,7 +63,7 @@
     "    detailed_collocation_2,\n",
     ")\n",
     "from dstb.language.commons import TermExtraction\n",
-    "from naat.data import CORPUS_PATH"
+    "from naat_core.data import CORPUS_PATH"
    ]
   },
   {
