--- a/naat/notebooks/eda_us_litigation_cases.ipynb
+++ b/naat/notebooks/eda_us_litigation_cases.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from naat.data import US_LITIGATION_CASES_PATH\n",
+    "from naat_core.data import US_LITIGATION_CASES_PATH\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
