--- a/naat/notebooks/model_training.ipynb
+++ b/naat/notebooks/model_training.ipynb
@@ -33,8 +33,8 @@
     "    Trainer,\n",
     "    TrainingArguments,\n",
     ")\n",
-    "from naat.data import list_files, OUTPUT_PATH, get_file_languages\n",
-    "from naat.data_files import ROOT\n",
+    "from naat_core.data import list_files, OUTPUT_PATH, get_file_languages\n",
+    "from naat_core.data_files import ROOT\n",
     "from nltk.corpus.reader.plaintext import PlaintextCorpusReader\n",
     "from pathlib import Path\n",
     "import os"
