--- a/naat/notebooks/eda_global_litigation_cases.ipynb
+++ b/naat/notebooks/eda_global_litigation_cases.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from naat.data import GLOBAL_LITIGATION_CASES_PATH\n",
+    "from naat_core.data import GLOBAL_LITIGATION_CASES_PATH\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
