--- a/naat/notebooks/files_processing.ipynb
+++ b/naat/notebooks/files_processing.ipynb
@@ -7,21 +7,21 @@
    "outputs": [
     {
      "ename": "ImportError",
-     "evalue": "cannot import name 'list_files' from 'naat.data' (/home/clem/Documents/source/sandbox/naat/naat/data/__init__.py)",
+     "evalue": "cannot import name 'list_files' from 'naat_core.data' (/home/clem/Documents/source/sandbox/naat/naat/data/__init__.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnaat\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnaat\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m list_files, get_file_extensions, get_empty_files, list_subfolders\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnaat\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m preprocess_docx_file, preprocess_pdf_file\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnaat\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m CORPUS_PATH, OUTPUT_PATH\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'list_files' from 'naat.data' (/home/clem/Documents/source/sandbox/naat/naat/data/__init__.py)"
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'list_files' from 'naat_core.data' (/home/clem/Documents/source/sandbox/naat/naat/data/__init__.py)"
      ]
     }
    ],
    "source": [
-    "from naat.data import list_files, get_file_extensions, get_empty_files, list_subfolders\n",
-    "from naat.data import preprocess_docx_file, preprocess_pdf_file\n",
-    "from naat.data import CORPUS_PATH, OUTPUT_PATH\n",
-    "from naat.data import detect_language, get_file_languages\n",
+    "from naat_core.data import list_files, get_file_extensions, get_empty_files, list_subfolders\n",
+    "from naat_core.data import preprocess_docx_file, preprocess_pdf_file\n",
+    "from naat_core.data import CORPUS_PATH, OUTPUT_PATH\n",
+    "from naat_core.data import detect_language, get_file_languages\n",
     "import gcld3\n",
     "import sys\n",
     "import math\n",
