--- a/coding_test/coding_test/python/python_coding_test.ipynb
+++ b/coding_test/coding_test/python/python_coding_test.ipynb
@@ -82,6 +82,32 @@
     "year = int(input())\n",
     "print(is_leap(year))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use `combinations()`\n",
+    "This tool returns the $r$ length subsequences of elements from the input iterable.\n",
+    "\n",
+    "Combinations are emitted in lexicographic sorted order. So, if the input iterable is sorted, the combination tuples will be produced in sorted order.\n",
+    "\n",
+    "You are given a string $S$. Your task is to print all possible combinations, up to size $k$, of the string in lexicographic sorted order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "print list(combinations('12345',2))\n",
+    "\n",
+    "A = [1,1,3,3,3]\n",
+    "print list(combinations(A,4))"
+   ]
   }
  ],
  "metadata": {
