--- a/coding_test/coding_test/python/educative_challenges.ipynb
+++ b/coding_test/coding_test/python/educative_challenges.ipynb
@@ -501,38 +501,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_kth_permutation(items, results, prefix=None):\n",
+    "    if len(items) == 0:\n",
+    "        results.append(prefix)\n",
+    "    \n",
+    "    for i, item in enumerate(items):\n",
+    "        new_result = prefix if prefix else []\n",
+    "        find_kth_permutation(items[:i] + items[i+1:], results, new_result + [item])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2], [3, 2, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = []\n",
+    "find_kth_permutation([1,2,3], res)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial(n):\n",
+    "  if n == 0 or n == 1:\n",
+    "    return 1\n",
+    "  return n * factorial(n -1 )\n",
+    "\n",
+    "def find_kth_permutation(v, k, result):\n",
+    "  if not v:\n",
+    "    return\n",
+    "  \n",
+    "  n = len(v)\n",
+    "  \n",
+    "  # count is number of permutations starting with first digit\n",
+    "  count = factorial(n - 1)\n",
+    "  selected = (k - 1) // count\n",
+    "  \n",
+    "  result += str(v[selected])\n",
+    "  del v[selected]\n",
+    "  k = k - (count * selected)\n",
+    "  find_kth_permutation(v, k, result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['3', '2', '1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = []\n",
+    "find_kth_permutation([1,2,3], 6 ,res)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<generator object find_kth_permutation at 0x7fa6105332e0>,\n",
-       " <generator object find_kth_permutation at 0x7fa610533200>,\n",
-       " <generator object find_kth_permutation at 0x7fa610533350>]"
+       "1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def find_kth_permutation(items, result=None):\n",
-    "    copy_items = items.copy()\n",
-    "    if len(copy_items) == 0:\n",
-    "        yield result\n",
-    "    \n",
-    "    for i, item in enumerate(copy_items):\n",
-    "        if result is None:\n",
-    "            result = [item]\n",
-    "        else:\n",
-    "            result.append(item)\n",
-    "        new_items = copy_items.copy()\n",
-    "        del new_items[i]\n",
-    "        yield find_kth_permutation(new_items, result)\n",
+    "5 // 3"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Power of 2 from 1 through n (inclusive)\n",
     "\n",
-    "list(find_kth_permutation([1,2,3]))"
+    "For example, if n i s 4, it would print 1,2, and 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def powers_of_2(n):\n",
+    "    if n < 1:\n",
+    "        return 0\n",
+    "    if n == 1:\n",
+    "        print(1)\n",
+    "        return 1\n",
+    "    prev = powers_of_2(n/2)\n",
+    "    curr = prev * 2\n",
+    "    print(curr)\n",
+    "    return curr\n",
+    "\n",
+    "powers_of_2(50)"
    ]
   }
  ],
