--- a/coding_test/coding_test/python/datasctructures.ipynb
+++ b/coding_test/coding_test/python/datasctructures.ipynb
@@ -307,6 +307,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, key, left=None, right=None):\n",
+    "        self.key = key\n",
+    "        self.right = right\n",
+    "        self.left = left\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        if self.right is None and self.left is None:\n",
+    "            return \"\"\n",
+    "        elif self.right is None:\n",
+    "            return f\"{repr(self.left)} -- xxx\"\n",
+    "        elif self.left is None:\n",
+    "            return f\"xxx -- {repr(self.right)}\"\n",
+    "        return f\"{repr(self.left)} -- {repr(self.right)}\"\n",
+    "\n",
+    "\n",
+    "root = Node(\n",
+    "    key=100,\n",
+    "    right=Node(50, Node(25), Node(75)),\n",
+    "    left=Node(200, Node(125), Node(350)),\n",
+    ")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
