--- a/coding_test/coding_test/sql/cracking_sql_interview.ipynb
+++ b/coding_test/coding_test/sql/cracking_sql_interview.ipynb
@@ -45,9 +45,7 @@
     "\n",
     "The SQL CROSS JOIN produces a result set which is the number of rows in the first table multiplied by the number of rows in the second table if no WHERE clause is used along with CROSS JOIN .This kind of result is called as Cartesian Product.\n",
     "\n",
-    "If `WHERE` clause is used with `CROSS JOIN`, it functions like an `INNER JOIN`.\n",
-    "\n",
-    "`CROSS JOIN` Syntax"
+    "If `WHERE` clause is used with `CROSS JOIN`, it functions like an `INNER JOIN`."
    ]
   },
   {
@@ -56,6 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# `CROSS JOIN` Syntax\n",
+    "\n",
     "\"\"\"SELECT *\n",
     "FROM table1\n",
     "CROSS JOIN table2;\n",
