--- a/coding_test/coding_test/sql/cracking_sql_interview.ipynb
+++ b/coding_test/coding_test/sql/cracking_sql_interview.ipynb
@@ -45,21 +45,14 @@
     "\n",
     "The SQL CROSS JOIN produces a result set which is the number of rows in the first table multiplied by the number of rows in the second table if no WHERE clause is used along with CROSS JOIN .This kind of result is called as Cartesian Product.\n",
     "\n",
-    "If `WHERE` clause is used with `CROSS JOIN`, it functions like an `INNER JOIN`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# `CROSS JOIN` Syntax\n",
+    "If `WHERE` clause is used with `CROSS JOIN`, it functions like an `INNER JOIN`.\n",
     "\n",
-    "\"\"\"SELECT *\n",
-    "FROM table1\n",
-    "CROSS JOIN table2;\n",
-    "\"\"\""
+    "`CROSS JOIN` Syntax\n",
+    "```SQL\n",
+    "SELECT *\n",
+    "    FROM table1\n",
+    "    CROSS JOIN table2;\n",
+    "```"
    ]
   },
   {
@@ -73,7 +66,178 @@
     "\n",
     "This can work fine for small tables. However, for big table, it will have a serious performance problem as in order to generate the list of random rows, MySQL need to assign random number to each row and then sort them.\n",
     "\n",
-    "Even if you want only 10 random rows from a set of 100k rows, MySQL need to sort all the 100k rows and then, extract only 10 of them."
+    "Even if you want only 10 random rows from a set of 100k rows, MySQL need to sort all the 100k rows and then, extract only 10 of them.\n",
+    "\n",
+    "```SQL\n",
+    "SELECT *\n",
+    "    FROM tbl\n",
+    "    ORDER BY RAND()\n",
+    "    LIMIT 10\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implicit and explicit joins are equivalent\n",
+    "\n",
+    "```SQL\n",
+    "SELECT CourseName, TeacherName\n",
+    "    FROM Courses\n",
+    "    INNER JOIN Teachers\n",
+    "    ON Courses.TeacherID = Teachers.TeacherID\n",
+    "```\n",
+    "\n",
+    "**is equivalent to**\n",
+    "\n",
+    "```SQL\n",
+    "SELECT CourseName, TeacherName\n",
+    "    FROM Courses, Teachers\n",
+    "    ON Courses.TeacherID = Teachers.TeacherID\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Normalized VS. Denormalized Databases\n",
+    "\n",
+    "Normalized are design to minimize redundancy, while denormalized databases are design to minimize read time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from coding_test.sql_commons import DbConnection\n",
+    "\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    \n",
+    "    con.execute(\"\"\"\n",
+    "CREATE TABLE Teachers(\n",
+    "    TeacherId INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "    TeacherName VARCHAR(100) \n",
+    ");\n",
+    "\"\"\")\n",
+    "    con.execute(\"\"\"\n",
+    "CREATE TABLE Students(\n",
+    "    StudentId INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "    StudentName VARCHAR(100) \n",
+    ");\n",
+    "\"\"\")\n",
+    "    con.execute(\"\"\"\n",
+    "CREATE TABLE Courses(\n",
+    "    CourseId INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "    CourseName VARCHAR(100),\n",
+    "    TeacherId INTEGER NOT NULL,\n",
+    "    FOREIGN KEY(TeacherId) REFERENCES Teachers(TeacherId)\n",
+    ");\n",
+    "\"\"\")\n",
+    "    con.execute(\"\"\"\n",
+    "CREATE TABLE StudentCourses(\n",
+    "    StudentCourseId INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "    CourseId INTEGER NOT NULL,\n",
+    "    StudentId INTEGER NOT NULL,\n",
+    "    FOREIGN KEY (CourseId) REFERENCES Courses(CourseId),\n",
+    "    FOREIGN KEY (StudentId) REFERENCES Students(StudentId),\n",
+    "    CONSTRAINT UX_StudentCourses UNIQUE (CourseId,StudentId)\n",
+    ");\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Insert Dummy Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    (\"Alex_Teacher\",),\n",
+    "    (\"Arthur_Teacher\",),\n",
+    "    (\"Mary_Teacher\",),\n",
+    "]\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    cur.executemany(\"INSERT INTO Teachers(TeacherName) VALUES(?)\", data)\n",
+    "    con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    (\"Come_Student\",),\n",
+    "    (\"Malo_Student\",),\n",
+    "    (\"Louison_Student\",),\n",
+    "    (\"Montaine_Student\",),\n",
+    "]\n",
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    cur.executemany(\"INSERT INTO Students(StudentName) VALUES(?)\", data)\n",
+    "    con.commit()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Casual Select"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Come_Student')\n",
+      "(2, 'Malo_Student')\n",
+      "(3, 'Louison_Student')\n",
+      "(4, 'Montaine_Student')\n"
+     ]
+    }
+   ],
+   "source": [
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    for row in cur.execute(\n",
+    "        \"\"\"\n",
+    "        SELECT * FROM Students\n",
+    "        \"\"\"\n",
+    "        ):\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Query 1: Student Enrollment\n",
+    "\n",
+    "Implement a query to get a list of all studets and how many courses each student is enrolled in"
    ]
   },
   {
@@ -81,19 +245,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"\"\"SELECT * \n",
-    "FROM tbl\n",
-    "ORDER BY RAND()\n",
-    "LIMIT 10\n",
-    "\"\"\""
-   ]
+   "source": []
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Query 2: Teacher Class Size\n",
+    "\n",
+    "Implement a query to get a list of all teachers and how many students they each teach.\n",
+    "\n",
+    "If a teacher teaches the same student in two courses you should double count the student.\n",
+    "\n",
+    "Sort the list in descending order of the number of students a teacher teaches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Drop Tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with DbConnection() as db_connection:\n",
+    "    con, cur = db_connection\n",
+    "    cur.execute(\"DROP TABLE Teachers\")\n",
+    "    cur.execute(\"DROP TABLE Students\")\n",
+    "    cur.execute(\"DROP TABLE Courses\")\n",
+    "    cur.execute(\"DROP TABLE StudentCourses\")\n",
+    "    con.commit()"
+   ]
   }
  ],
  "metadata": {
